fix: fix run and docs tasks